# ecommerce-product-management-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: ARCHITECTURE.md
include/: config.h
src/: inventory.h  product.h
tests/: test_product.cpp
